--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../frontend/src/assets/images/logo1.png" />
     <title>revive medical center</title>
+    <link rel="icon" href="/src/assets/images/logo1.png" />
   </head>
   <body>
     <div id="root"></div>
