--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>revive medical center</title>
+    <title>Revive Medical Center</title>
     <link rel="icon" href="/src/assets/images/logo1.png" />
   </head>
   <body>
